--- a/practice/labs/portswigger/04.clickjacking.md
+++ b/practice/labs/portswigger/04.clickjacking.md
@@ -1,13 +1,9 @@
-⚪ [Basic clickjacking with CSRF token protection](https://portswigger.net/web-security/clickjacking/lab-basic-csrf-protected)
+1.  [Basic clickjacking with CSRF token protection](https://portswigger.net/web-security/clickjacking/lab-basic-csrf-protected)
 
+2.  [Clickjacking with form input data prefilled from a URL parameter](https://portswigger.net/web-security/clickjacking/lab-prefilled-form-input)
 
-⚪ [Clickjacking with form input data prefilled from a URL parameter](https://portswigger.net/web-security/clickjacking/lab-prefilled-form-input)
+3.  [Clickjacking with a frame buster script](https://portswigger.net/web-security/clickjacking/lab-frame-buster-script)
 
+4.  [Exploiting clickjacking vulnerability to trigger DOM-based XSS](https://portswigger.net/web-security/clickjacking/lab-exploiting-to-trigger-dom-based-xss)
 
-⚪ [Clickjacking with a frame buster script](https://portswigger.net/web-security/clickjacking/lab-frame-buster-script)
-
-
-⚪ [Exploiting clickjacking vulnerability to trigger DOM-based XSS](https://portswigger.net/web-security/clickjacking/lab-exploiting-to-trigger-dom-based-xss)
-
-
-⚪ [Multistep clickjacking](https://portswigger.net/web-security/clickjacking/lab-multistep)
+5.  [Multistep clickjacking](https://portswigger.net/web-security/clickjacking/lab-multistep)
