--- a/practice/labs/portswigger/10.os-command-injection.md
+++ b/practice/labs/portswigger/10.os-command-injection.md
@@ -1,14 +1,10 @@
 
-⚪ [OS command injection, simple case](https://portswigger.net/web-security/os-command-injection/lab-simple)
+1.  [OS command injection, simple case](https://portswigger.net/web-security/os-command-injection/lab-simple)
 
+2.  [Blind OS command injection with time delays](https://portswigger.net/web-security/os-command-injection/lab-blind-time-delays)
 
-⚪ [Blind OS command injection with time delays](https://portswigger.net/web-security/os-command-injection/lab-blind-time-delays)
+3.  [Blind OS command injection with output redirection](https://portswigger.net/web-security/os-command-injection/lab-blind-output-redirection)
 
+4.  [Blind OS command injection with out-of-band interaction](https://portswigger.net/web-security/os-command-injection/lab-blind-out-of-band)
 
-⚪ [Blind OS command injection with output redirection](https://portswigger.net/web-security/os-command-injection/lab-blind-output-redirection)
-
-
-⚪ [Blind OS command injection with out-of-band interaction](https://portswigger.net/web-security/os-command-injection/lab-blind-out-of-band)
-
-
-⚪ [Blind OS command injection with out-of-band data exfiltration](https://portswigger.net/web-security/os-command-injection/lab-blind-out-of-band-data-exfiltration)
+5.  [Blind OS command injection with out-of-band data exfiltration](https://portswigger.net/web-security/os-command-injection/lab-blind-out-of-band-data-exfiltration)
