--- a/practice/labs/portswigger/30.web-llm-attacks.md
+++ b/practice/labs/portswigger/30.web-llm-attacks.md
@@ -1,11 +1,8 @@
-⚪ [Exploiting LLM APIs with excessive agency](https://portswigger.net/web-security/llm-attacks/lab-exploiting-llm-apis-with-excessive-agency)
+1.  [Exploiting LLM APIs with excessive agency](https://portswigger.net/web-security/llm-attacks/lab-exploiting-llm-apis-with-excessive-agency)
 
+2.  [Exploiting vulnerabilities in LLM APIs](https://portswigger.net/web-security/llm-attacks/lab-exploiting-vulnerabilities-in-llm-apis)
 
-⚪ [Exploiting vulnerabilities in LLM APIs](https://portswigger.net/web-security/llm-attacks/lab-exploiting-vulnerabilities-in-llm-apis)
+3.  [Indirect prompt injection](https://portswigger.net/web-security/llm-attacks/lab-indirect-prompt-injection)
 
-
-⚪ [Indirect prompt injection](https://portswigger.net/web-security/llm-attacks/lab-indirect-prompt-injection)
-
-
-⚪ [Exploiting insecure output handling in LLMs](https://portswigger.net/web-security/llm-attacks/lab-exploiting-insecure-output-handling-in-llms)
+4.  [Exploiting insecure output handling in LLMs](https://portswigger.net/web-security/llm-attacks/lab-exploiting-insecure-output-handling-in-llms)
 
